--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-chrometab",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://juancastellano.gq/React-chrometab",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -33,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
